--- a/case study/contract-list.html
+++ b/case study/contract-list.html
@@ -1,10 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Contract</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+          integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
 </head>
-<body>
-$END$
+<body id="page-top">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <div class="container">
+        <a class="navbar-brand" href="home.html"><img src="https://www.furama.com/images/LOGOFurama_4C_Normal.png" alt="..." /></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            Menu
+            <i class="fas fa-bars ms-1"></i>
+        </button>
+    </div>
+</nav>
+<header class="masthead">
+    <div class="container">
+        <div class="masthead-subheading"></div>
+        <div class="masthead-heading text-uppercase"></div>
+        <a class=" btn-xl text-uppercase" href="#services"></a>
+    </div>
+</header>
+
+
+
+
+
+
+
+
+<!-- ================ Explore section start ================= -->
+<section class="section-margin section-margin--small">
+    <div class="container">
+
+            <h2>Contract List</h2>
+
+        <p class="mt-3">Searching contract </p>
+        <div class="form-inline my-lg-3">
+            <div class="row">
+                <div class="col">
+                    <input class="form-control mr-sm-2" type="date" placeholder="from" aria-label="Search"
+                           name="fromDate">
+                </div>
+                <div class="col">
+                    <input class="form-control mr-sm-2" type="date" placeholder="to" aria-label="Search"
+                           name="toDate">
+                </div>
+                <div class="col">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </div>
+            </div>
+        </div>
+        <table class="table table-borderless table-striped">
+            <thead class="thead-dark">
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Service</th>
+                <th scope="col">Customer</th>
+                <th scope="col">Start date</th>
+                <th scope="col">End date</th>
+                <th scope="col">Deposit</th>
+                <th scope="col">Total</th>
+                <th scope="col" class="col-3">Attach</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>1</td>
+                <td>Villa River Side</td>
+                <td>Nguyễn Quang Trường</td>
+                <td>01-01-2022</td>
+                <td>12-31-2022</td>
+                <td>500.000</td>
+                <td>5.000.000</td>
+                <td>Buffet, karaoke,thuê xe đạp</td>
+            </tr>
+            </tbody>
+        </table>
+
+    </div>
+    </div>
+    <!--        paging-->
+    <nav class="blog-pagination d-flex justify-content-center py-3">
+        <ul class="pagination">
+            <!--            <li class="page-item active px-1">-->
+            <!--                <a th:href="@{/employees(page=${employees.number - 1},-->
+            <!--                                    name=${nameVal},-->
+            <!--                                    phone=${phoneVal},-->
+            <!--                                    department=${departmentVal})}" class="page-link">Previous</a>-->
+            <!--            </li>-->
+            <li class="page-item px-1">
+                <a href="#" class="page-link">Previous</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link">
+                    <span>1</span>
+                    <span>/</span>
+                    <span>5</span>
+                </a>
+            </li>
+            <li class="page-item px-1">
+                <a href="#" class="page-link">Next</a>
+            </li>
+        </ul>
+    </nav>
+    <!--        paging-->
+</section>
+
+
+
+
+<footer  class="text-center text-lg-start bg-dark text-muted">
+    <!-- Section: Social media -->
+    <section
+            class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+    >
+        <!-- Left -->
+        <div class="me-5 d-none d-lg-block">
+            <span>Get connected with us on social networks:</span>
+        </div>
+        <!-- Left -->
+
+        <!-- Right -->
+        <div>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-google"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="" class="me-4 text-reset">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+        <!-- Right -->
+    </section>
+    <!-- Section: Social media -->
+
+    <!-- Section: Links  -->
+    <section class="">
+        <div class="container text-center text-md-start mt-auto">
+            <!-- Grid row -->
+            <div class="row mt-3">
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                    <!-- Content -->
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        <i class="fas fa-gem me-3"></i>Company name
+                    </h6>
+                    <p>
+                        Here you can use rows and columns to organize your footer content. Lorem ipsum
+                        dolor sit amet, consectetur adipisicing elit.
+                    </p>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <!-- Links -->
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        Furama
+                    </h6>
+                    <p>
+                        <a href="https://furamavietnam.com/vi/furama-resort-danang-rack-rate/" class="text-reset">Giá Công Bố</a>
+                    </p>
+                    <p>
+                        <a href="https://furamavietnam.com/vi/lifestyle-blog/" class="text-reset">Tuyển dụng </a>
+                    </p>
+                    <p>
+                        <a href="https://furamavietnam.com/vi/work-with-us/" class="text-reset">Liên hệ</a>
+                    </p>
+                    <p>
+                        <a href="https://furamavietnam.com/vi/contact/" class="text-reset">Lifestyle Blog</a>
+                    </p>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <!-- Links -->
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        Useful links
+                    </h6>
+                    <p>
+                        <a href="#!" class="text-reset">Pricing</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset">Settings</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset">Orders</a>
+                    </p>
+                    <p>
+                        <a href="#!" class="text-reset">Help</a>
+                    </p>
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <!-- Links -->
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        Contact
+                    </h6>
+                    <p><i class="fas fa-home me-3"></i>103 - 105 Vo Nguyen Giap Street, Khue My Ward, Ngu Hanh Son District, Danang City, Vietnam</p>
+                    <p>
+                        <i class="fas fa-envelope me-3"></i>
+                        reservation@furamavietnam.com
+                    </p>
+                    <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+                    <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+                </div>
+                <!-- Grid column -->
+            </div>
+            <!-- Grid row -->
+        </div>
+    </section>
+    <!-- Section: Links  -->
+
+    <!-- Copyright -->
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        <a class="text-reset fw-bold" href="https://mdbootstrap.com/"> © 2018 Furama Resort Danang.</a>
+    </div>
+    <!-- Copyright -->
+</footer>
+
+
+
 </body>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+        crossorigin="anonymous"></script>
 </html>
